# mini-grep

./: Cargo.toml  README.md
resources/: example.txt
src/: main.rs  mini_grep.rs
src/mini_grep/: command.rs  errors.rs
