[package]
name = "mini-grep"
version = "0.1.0"
authors = ["Xyphenore"]
description = "This is a simple grep."
readme = "README.md"
keywords = ["grep", "cli"]
categories = ["command-line-utilities"]

repository = "https://github.com/Xyphenore/mini-grep"
license = "LGPL-3.0-or-later"
publish = false

edition = "2021"
rust-version = "1.79.0"

include = ["/src", "README.md", "LICENSE.md"]

[badges]
maintenance = { status = "deprecated" }

[dependencies]

[dev-dependencies]

[build-dependencies]
